--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body onload="init()">
+  <body">
     <h1 id="name"></h1>
-    <div id="container">
+    <div  onload="init() id="container">
     <section id="viewer">
     <div id="n">north</div>
     <div id="w">west</div>
