--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="script.js"></script>
+  
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body">
     <h1 id="name"></h1>
-    <div  onload="init() id="container">
+    <div  onload="init()" id="container">
     <section id="viewer">
     <div id="n">north</div>
     <div id="w">west</div>
@@ -20,4 +20,5 @@
       <div id="map">maps</div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
