--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html onload="init()" >
+<html" >
   <head>
     <meta charset="UTF-8">
   
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body">
+  <body onload='init()';>
     <h1 id="name"></h1>
     <div  id="container">
     <section id="viewer">
