--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html" >
+<html>
   <head>
     <meta charset="UTF-8">
   
+    <script src="script.js"></script>
+
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body onload='init()';>
+  <body>
     <h1 id="name"></h1>
     <div  id="container">
     <section id="viewer">
@@ -20,5 +22,7 @@
       <div id="map">maps</div>
     </div>
   </body>
-  <script src="script.js"></script>
-</html>
+  <script>
+    init();
+    </script>
+  </html>
